--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -41,7 +41,7 @@
     "@types/gulp-sass": "^5.0.4",
     "@types/gulp-util": "^3.0.41",
     "@types/node": "^20.13.0",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
@@ -69,12 +69,12 @@
     "sass": "^1.77.4",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-patch": "^2.2.4",
+    "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.1",
+    "weapp-tailwindcss": "^3.3.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "dependencies": {
