--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -63,7 +63,7 @@
     "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "@weapp-tailwindcss/cli": "^1.0.0",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.18",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "3.6.24",
@@ -81,12 +81,12 @@
     "stylelint": "16.2.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-patch": "^2.2.3",
+    "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.4.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.1",
+    "weapp-tailwindcss": "^3.3.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3",
@@ -94,5 +94,6 @@
   },
   "engines": {
     "node": ">=12.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
