--- a/demo-linked/web-postcss7-compat/package.json
+++ b/demo-linked/web-postcss7-compat/package.json
@@ -14,7 +14,7 @@
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "weapp-tailwindcss": "^3.3.0-alpha.0"
+    "weapp-tailwindcss": "^3.3.0"
   },
   "dependencies": {
     "tailwindcss-patch": "^3.0.0"
