--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -43,58 +43,58 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.24.0",
-    "@tarojs/components": "3.6.24",
-    "@tarojs/helper": "3.6.24",
-    "@tarojs/plugin-framework-vue2": "3.6.24",
-    "@tarojs/plugin-platform-alipay": "3.6.24",
-    "@tarojs/plugin-platform-jd": "3.6.24",
-    "@tarojs/plugin-platform-qq": "3.6.24",
-    "@tarojs/plugin-platform-swan": "3.6.24",
-    "@tarojs/plugin-platform-tt": "3.6.24",
-    "@tarojs/plugin-platform-weapp": "3.6.24",
-    "@tarojs/router": "3.6.24",
-    "@tarojs/runtime": "3.6.24",
-    "@tarojs/shared": "3.6.24",
-    "@tarojs/taro": "3.6.24",
-    "@tarojs/taro-h5": "3.6.24",
+    "@babel/runtime": "^7.24.7",
+    "@tarojs/components": "3.6.31",
+    "@tarojs/helper": "3.6.31",
+    "@tarojs/plugin-framework-vue2": "3.6.31",
+    "@tarojs/plugin-platform-alipay": "3.6.31",
+    "@tarojs/plugin-platform-jd": "3.6.31",
+    "@tarojs/plugin-platform-qq": "3.6.31",
+    "@tarojs/plugin-platform-swan": "3.6.31",
+    "@tarojs/plugin-platform-tt": "3.6.31",
+    "@tarojs/plugin-platform-weapp": "3.6.31",
+    "@tarojs/router": "3.6.31",
+    "@tarojs/runtime": "3.6.31",
+    "@tarojs/shared": "3.6.31",
+    "@tarojs/taro": "3.6.31",
+    "@tarojs/taro-h5": "3.6.31",
     "vue": "~2.6.14",
     "vue-template-compiler": "~2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@tarojs/cli": "3.6.24",
-    "@tarojs/mini-runner": "3.6.24",
-    "@tarojs/webpack-runner": "3.6.24",
-    "@tarojs/webpack5-runner": "3.6.24",
-    "@types/webpack-env": "^1.18.4",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@babel/core": "^7.24.7",
+    "@tarojs/cli": "3.6.31",
+    "@tarojs/mini-runner": "3.6.31",
+    "@tarojs/webpack-runner": "3.6.31",
+    "@tarojs/webpack5-runner": "3.6.31",
+    "@types/webpack-env": "^1.18.5",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "@vue/babel-preset-jsx": "^1.2.4",
     "@weapp-tailwindcss/cli": "^1.0.3",
-    "autoprefixer": "^10.4.18",
-    "babel-preset-taro": "3.6.24",
+    "autoprefixer": "^10.4.19",
+    "babel-preset-taro": "3.6.31",
     "cross-env": "^7.0.3",
     "css-loader": "6.10.0",
     "eslint": "^8.57.0",
-    "eslint-config-taro": "3.6.24",
-    "eslint-plugin-vue": "^9.22.0",
-    "postcss": "^8.4.35",
+    "eslint-config-taro": "3.6.31",
+    "eslint-plugin-vue": "^9.26.0",
+    "postcss": "^8.4.38",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
     "style-loader": "3.3.4",
-    "stylelint": "^16.2.1",
+    "stylelint": "^16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.4.2",
+    "typescript": "~5.4.5",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.3.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
-    "webpack": "^5.90.3"
+    "weapp-tailwindcss-webpack-plugin": "^3.2.1",
+    "webpack": "^5.91.0"
   },
   "packageManager": "yarn@1.22.22"
 }
