Feature/tailwindcss postcss7 compat (#302)
* chore: prepare for postcss7 compat tailwindcss

* chore(demo): update snap

* chore: add web-postcss7-compat case

* chore: release weapp-tailwindcss 3.3.0

* fix: turbo.json format

* chore(demo): upgrade

* chore(demo): temp remove mpx app support

--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -17,39 +17,39 @@
   },
   "dependencies": {
     "@mpxjs/api-proxy": "^2.9.28",
-    "@mpxjs/core": "^2.9.27",
+    "@mpxjs/core": "^2.9.33",
     "@mpxjs/fetch": "^2.9.1",
-    "@mpxjs/pinia": "^2.9.1",
+    "@mpxjs/pinia": "^2.9.31",
     "@mpxjs/store": "^2.9.9",
     "@mpxjs/utils": "^2.9.1",
-    "@vant/weapp": "^1.11.5",
+    "@vant/weapp": "^1.11.6",
     "pinia": "^2.1.7",
-    "tdesign-miniprogram": "^1.3.0",
+    "tdesign-miniprogram": "^1.4.1",
     "vue": "^2.6.14",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^8.27.2",
-    "vue-i18n-bridge": "^9.6.0",
+    "vue-i18n-bridge": "^9.13.1",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/plugin-transform-runtime": "^7.24.3",
-    "@babel/preset-env": "^7.24.4",
-    "@babel/runtime-corejs3": "^7.24.4",
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/runtime-corejs3": "^7.24.7",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
-    "@mpxjs/mpx-cli-service": "^2.1.8",
+    "@mpxjs/mpx-cli-service": "^2.1.10",
     "@mpxjs/mpx-jest": "^0.0.30",
     "@mpxjs/size-report": "^2.9.26",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.1.8",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.8",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.1.10",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.10",
     "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.8",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.8",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.8",
-    "@mpxjs/webpack-plugin": "^2.9.30",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.10",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.10",
+    "@mpxjs/webpack-plugin": "^2.9.34",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/cli": "^1.0.0",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -59,25 +59,26 @@
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.75.0",
+    "sass": "^1.77.4",
     "sass-loader": "^14.2.1",
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-patch": "^2.2.3",
+    "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.1",
+    "weapp-tailwindcss": "^3.3.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1",
+    "weapp-tailwindcss-webpack-plugin": "^3.2.1",
     "webpack": "^5.91.0"
   },
   "browserslist": [
     "ios >= 8",
     "chrome >= 47"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22"
 }
