--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -10,17 +10,18 @@
   "license": "",
   "dependencies": {},
   "devDependencies": {
-    "@weapp-tailwindcss/cli": "^1.0.0",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "miniprogram-api-typings": "^2.8.3-1",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-patch": "^2.2.3",
+    "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.1",
+    "weapp-tailwindcss": "^3.3.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
