--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -52,26 +52,26 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-4000820240401001",
-    "@dcloudio/uni-app-plus": "2.0.2-4000820240401001",
-    "@dcloudio/uni-h5": "2.0.2-4000820240401001",
+    "@dcloudio/uni-app": "2.0.2-4010520240507001",
+    "@dcloudio/uni-app-plus": "2.0.2-4010520240507001",
+    "@dcloudio/uni-h5": "2.0.2-4010520240507001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-360": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-jd": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-lark": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-qq": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-vue": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-4000820240401001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-4000820240401001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-4000820240401001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-4000820240401001",
-    "@dcloudio/uni-stacktracey": "2.0.2-4000820240401001",
-    "@dcloudio/uni-stat": "2.0.2-4000820240401001",
+    "@dcloudio/uni-i18n": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-360": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-jd": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-lark": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-qq": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-vue": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-4010520240507001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-4010520240507001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-4010520240507001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-4010520240507001",
+    "@dcloudio/uni-stacktracey": "2.0.2-4010520240507001",
+    "@dcloudio/uni-stat": "2.0.2-4010520240507001",
     "@vant/weapp": "^1.11.4",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.36.0",
@@ -85,22 +85,22 @@
     "@babel/plugin-syntax-typescript": "^7.23.3",
     "@babel/runtime": "~7.24.0",
     "@dcloudio/types": "3.4.8",
-    "@dcloudio/uni-automator": "2.0.2-4000820240401001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-4000820240401001",
-    "@dcloudio/uni-cli-shared": "2.0.2-4000820240401001",
-    "@dcloudio/uni-migration": "2.0.2-4000820240401001",
-    "@dcloudio/uni-template-compiler": "2.0.2-4000820240401001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4000820240401001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4000820240401001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4000820240401001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4000820240401001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4000820240401001",
+    "@dcloudio/uni-automator": "2.0.2-4010520240507001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-4010520240507001",
+    "@dcloudio/uni-cli-shared": "2.0.2-4010520240507001",
+    "@dcloudio/uni-migration": "2.0.2-4010520240507001",
+    "@dcloudio/uni-template-compiler": "2.0.2-4010520240507001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4010520240507001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4010520240507001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4010520240507001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4010520240507001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4010520240507001",
     "@egoist/tailwindcss-icons": "^1.7.4",
     "@iconify-json/mdi": "^1.1.64",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@weapp-tailwindcss/cli": "^1.0.0",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "10.4.18",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
@@ -116,12 +116,12 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-patch": "^2.2.3",
+    "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.1",
+    "weapp-tailwindcss": "^3.3.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
   },
@@ -131,5 +131,6 @@
   ],
   "uni-app": {
     "scripts": {}
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
