--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -49,7 +49,7 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.10",
     "@mpxjs/webpack-plugin": "^2.9.34",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -64,14 +64,14 @@
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.0",
+    "weapp-tailwindcss": "^3.3.1-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.2.1",
     "webpack": "^5.91.0"
