--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -63,7 +63,7 @@
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.19",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "3.6.31",
@@ -80,13 +80,13 @@
     "postcss-rpx-transform": "^1.0.1",
     "stylelint": "16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.4.5",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.0",
+    "weapp-tailwindcss": "^3.3.1-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.2.1",
     "webpack": "^5.91.0",
