--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -52,7 +52,7 @@
     "@tarojs/plugin-platform-h5": "3.6.31",
     "@tarojs/runtime": "3.6.31",
     "@tarojs/taro": "3.6.31",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -65,7 +65,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "@vue/babel-plugin-jsx": "^1.1.5",
     "@vue/compiler-sfc": "^3.3.4",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.19",
     "babel-preset-taro": "3.6.31",
     "cross-env": "^7.0.3",
@@ -84,7 +84,7 @@
     "unplugin-vue-components": "^0.27.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.0",
+    "weapp-tailwindcss": "^3.3.1-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3"
