--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -100,7 +100,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
@@ -113,13 +113,13 @@
     "sass": "^1.71.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.0",
+    "weapp-tailwindcss": "^3.3.1-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
   },
