--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "e2e:dev": "vitest -c ./e2e/vitest.e2e.config.ts",
     "e2e:u": "vitest run -u -c ./e2e/vitest.e2e.config.ts",
     "demo:build": "node scripts/demo/build.js",
+    "demo:build:babel": "node scripts/demo/build.js --babel",
     "demo:bench": "node scripts/demo/bench.js",
-    "demo:build:local": "node scripts/demo/build.js --local",
     "demo:install": "node scripts/demo/install.js",
     "demo:install:beta": "node scripts/demo/install.js --beta",
     "demo:install:alpha": "node scripts/demo/install.js --alpha",
