--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -6,7 +6,7 @@
     "dev": "cross-env BABEL=1 mpx-cli-service serve",
     "dev:debug": "cross-env DEBUG=weapp-tw mpx-cli-service serve",
     "serve": "mpx-cli-service serve",
-    "build": "cross-env BABEL=1 mpx-cli-service build",
+    "build": "cross-env mpx-cli-service build",
     "build:babel": "cross-env BABEL=1 mpx-cli-service build",
     "test:e2e": "npx e2e-runner j---config=./jest-e2e.config.js",
     "lint": "eslint --ext .js,.ts,.mpx src/",
