--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -71,7 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "@vue/babel-preset-jsx": "^1.2.4",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "^10.4.19",
     "babel-preset-taro": "3.6.31",
     "cross-env": "^7.0.3",
@@ -91,7 +91,7 @@
     "typescript": "~5.4.5",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.1-alpha.1",
+    "weapp-tailwindcss": "^3.3.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.2.1",
     "webpack": "^5.91.0"
