--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -100,7 +100,7 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "10.4.18",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
@@ -121,7 +121,7 @@
     "typescript": "~5.4.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.1-alpha.1",
+    "weapp-tailwindcss": "^3.3.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
   },
