Fix/ast grep unicode (#305)
* chore(deps): upgrade

* fix: ast-grep unicode

* chore: use babel build

* chore: release weapp-tailwindcss 3.3.1

* fix: https://github.com/sonofmagic/weapp-tailwindcss/issues/304

--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -6,7 +6,7 @@
     "dev": "cross-env BABEL=1 mpx-cli-service serve",
     "dev:debug": "cross-env DEBUG=weapp-tw mpx-cli-service serve",
     "serve": "mpx-cli-service serve",
-    "build": "cross-env BABEL=1 mpx-cli-service build",
+    "build": "cross-env mpx-cli-service build",
     "build:babel": "cross-env BABEL=1 mpx-cli-service build",
     "test:e2e": "npx e2e-runner j---config=./jest-e2e.config.js",
     "lint": "eslint --ext .js,.ts,.mpx src/",
@@ -64,14 +64,14 @@
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.0",
+    "weapp-tailwindcss": "^3.3.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.2.1",
     "webpack": "^5.91.0"
