--- a/website/package.json
+++ b/website/package.json
@@ -18,7 +18,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "deploy:cos": "pnpm build && ice-deploy -c --dir=build"
+    "deploy:cos": "pnpm build && ice-deploy -c --dir=build",
+    "build:docs": "node scripts/index.js"
   },
   "dependencies": {
     "@docusaurus/core": "3.4.0",
