--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "miniprogram-automator": "^0.12.1",
+    "pathe": "^1.1.2",
     "pkg-types": "^1.1.1",
     "postcss": "^8.4.38",
     "postcss-load-config": "^6.0.1",
@@ -176,6 +177,7 @@
     "ts-patch": "^3.2.0",
     "tsd": "^0.31.0",
     "tslib": "^2.6.3",
+    "tsx": "^4.15.2",
     "turbo": "^2.0.3",
     "typescript": "^5.4.5",
     "typescript-transform-paths": "^3.4.7",
