--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -17,7 +17,7 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "rax": "^1.2.3",
     "rax-document": "^0.1.0",
     "rax-image": "^2.4.3",
@@ -29,23 +29,22 @@
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.18",
     "@weapp-tailwindcss/cli": "^1.0.3",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "rax-app": "3.8.22",
-    "stylelint": "^16.2.1",
+    "stylelint": "^16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.3.1",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
+    "weapp-tailwindcss-children": "^0.1.0"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts",
