--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -12,7 +12,7 @@
   "dependencies": {},
   "devDependencies": {
     "@weapp-tailwindcss/cli": "^1.0.3",
-    "miniprogram-api-typings": "^2.8.3-1",
+    "miniprogram-api-typings": "^3.12.2",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
@@ -21,8 +21,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.3.1",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
+    "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
 }
