--- a/demo/native/package.json
+++ b/demo/native/package.json
@@ -20,8 +20,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.3.1",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
+    "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
 }
