--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -40,20 +40,21 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4000820240401001",
-    "@dcloudio/uni-app-plus": "3.0.0-4000820240401001",
-    "@dcloudio/uni-components": "3.0.0-4000820240401001",
-    "@dcloudio/uni-h5": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4000820240401001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4000820240401001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4000820240401001",
+    "@dcloudio/uni-app": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-app-harmony": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-components": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-jd": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4010920240607001",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
     "eventemitter3": "^5.0.1",
@@ -63,22 +64,22 @@
     "p-queue": "8.0.1",
     "uview-plus": "^3.1.45",
     "vk-uview-ui": "^1.5.2",
-    "vue": "^3.3.11",
+    "vue": "^3.4.21",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.3.2",
-    "@dcloudio/uni-automator": "3.0.0-4000820240401001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4000820240401001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4000820240401001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4000820240401001",
+    "@dcloudio/types": "^3.4.8",
+    "@dcloudio/uni-automator": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4010920240607001",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
-    "@vue/runtime-core": "^3.3.11",
+    "@vue/runtime-core": "^3.4.21",
     "@weapp-tailwindcss/cli": "^1.0.3",
     "@weapp-tailwindcss/typography": "^0.2.4",
     "autoprefixer": "^10.4.18",
@@ -92,11 +93,10 @@
     "tailwindcss-patch": "^3.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
-    "vite": "4.3.5",
+    "vite": "5.2.8",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.3.1",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
+    "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
 }
