--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -9,8 +9,8 @@
     "build:babel": "node ./index.js"
   },
   "dependencies": {
-    "defu": "^6.1.2",
-    "postcss": "^8.4.31",
+    "defu": "^6.1.4",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
@@ -22,8 +22,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.3.1",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
+    "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
 }
