--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./index.js",
     "build": "node ./index.js",
-    "build:babel": "node ./index.js"
+    "build:babel": "node ./index.js",
+    "postinstall": "weapp-tw patch"
   },
   "dependencies": {
     "defu": "^6.1.4",
