--- a/demo-linked/uni-app-vite/package.json
+++ b/demo-linked/uni-app-vite/package.json
@@ -76,9 +76,10 @@
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.3.2",
+    "typescript": "~5.4.5",
     "vite": "4.0.3",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "workspace:^",
     "weapp-tailwindcss-children": "^0.1.0"
   }
 }
