--- a/demo-linked/uni-app-webpack5/package.json
+++ b/demo-linked/uni-app-webpack5/package.json
@@ -84,7 +84,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.22.5",
-    "@babel/runtime": "~7.23.2",
+    "@babel/runtime": "~7.24.7",
     "@dcloudio/types": "^3.3.3",
     "@dcloudio/uni-automator": "2.0.2-3090820231124001",
     "@dcloudio/uni-cli-i18n": "2.0.2-3090820231124001",
@@ -94,14 +94,14 @@
     "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3090820231124001",
     "@dcloudio/vue-cli-plugin-uni": "2.0.2-3090820231124001",
     "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3090820231124001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3090820231124001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4010520240507001",
     "@dcloudio/webpack-uni-pages-loader": "2.0.2-3090820231124001",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mini-types": "*",
     "miniprogram-api-typings": "3.12.0",
@@ -113,10 +113,10 @@
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.2.2",
+    "typescript": "~5.4.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^2.8.4",
+    "weapp-tailwindcss": "workspace:^",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
