chore(misc): remove demo-linked from workspace

--- a/demo-linked/uni-app-vite/package.json
+++ b/demo-linked/uni-app-vite/package.json
@@ -39,33 +39,34 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3090920231225001",
-    "@dcloudio/uni-app-plus": "3.0.0-3090920231225001",
-    "@dcloudio/uni-components": "3.0.0-3090920231225001",
-    "@dcloudio/uni-h5": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-jd": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-lark": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-qq": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-3090920231225001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3090920231225001",
+    "@dcloudio/uni-app": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-app-harmony": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-components": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-jd": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4010920240607001",
     "dayjs": "^1.11.9",
     "pinia": "~2.0.14",
-    "vue": "^3.3.8",
-    "vue-i18n": "^9.5.0",
+    "vue": "^3.4.29",
+    "vue-i18n": "^9.13.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.4.3",
-    "@dcloudio/uni-automator": "3.0.0-3090920231225001",
-    "@dcloudio/uni-cli-shared": "3.0.0-3090920231225001",
-    "@dcloudio/uni-stacktracey": "3.0.0-3090920231225001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3090920231225001",
-    "@vue/runtime-core": "^3.3.7",
+    "@dcloudio/types": "^3.4.8",
+    "@dcloudio/uni-automator": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4010920240607001",
+    "@vue/runtime-core": "^3.4.29",
     "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
     "miniprogram-api-typings": "^3.12.1",
@@ -77,7 +78,7 @@
     "tailwindcss": "^3.3.5",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.5",
-    "vite": "4.0.3",
+    "vite": "5.2.8",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "workspace:^",
     "weapp-tailwindcss-children": "^0.1.0"
