chore: remove action pnpm version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 9
+        # with:
+        #   version: 9
 
       - name: Set node
         uses: actions/setup-node@v4
