--- a/website/package.json
+++ b/website/package.json
@@ -48,7 +48,7 @@
     "tailwindcss": "^3.4.4",
     "typedoc": "^0.26.1",
     "typedoc-plugin-markdown": "4.1.0",
-    "typescript": "^5.5.2",
+    "typescript": "5.4.5",
     "webpack-node-externals": "^3.0.0"
   },
   "browserslist": {
