chore: upgrade typescript and ts-patch

--- a/package.json
+++ b/package.json
@@ -174,11 +174,11 @@
     "tailwindcss": "^3.4.4",
     "ts-morph": "^23.0.0",
     "ts-node": "^10.9.2",
-    "ts-patch": "^3.2.0",
+    "ts-patch": "^3.2.1",
     "tsd": "^0.31.1",
     "tslib": "^2.6.3",
     "turbo": "^2.0.5",
-    "typescript": "5.4.5",
+    "typescript": "^5.5.2",
     "typescript-transform-paths": "^3.4.7",
     "unbuild": "^2.0.0",
     "vinyl": "^3.0.0",
