test(e2e): add native apps cases

--- a/apps/native-ts-skyline/package.json
+++ b/apps/native-ts-skyline/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniprogram-ts-quickstart",
+  "name": "@native-app/skyline-ts",
   "version": "1.0.0",
   "description": "",
   "scripts": {
