--- a/apps/native-skyline/package.json
+++ b/apps/native-skyline/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "native-skyline",
+  "name": "@native-app/skyline",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
