--- a/apps/native-ts/package.json
+++ b/apps/native-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniprogram-ts-sass-quickstart",
+  "name": "@native-app/ts",
   "version": "1.0.0",
   "description": "",
   "scripts": {
