--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "jsx": "react",
     "target": "ESNext",
+    "jsx": "react",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "strict": true,
     "types": [
       "vitest/globals"
-    ]
+    ],
+    "strict": true,
+    "esModuleInterop": true
   }
 }
