--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "postcss": "^8.4.39",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.1.1",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.3.2",
     "promisify-loader-runner": "^1.0.1",
     "rollup": "^4.18.0",
