--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -129,19 +129,16 @@
     "test": "npm run postinstall && vitest run",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
-    "vitest:coverage": "vitest run --coverage",
     "clean": "node scripts/clean.js",
-    "raw": "ts-node scripts/raw",
-    "get-decl": "ts-node scripts/get-decl.ts",
+    "raw": "tsx scripts/raw",
+    "get-decl": "tsx scripts/get-decl.ts",
     "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw",
-    "format": "prettier --check \"src/**/*.{ts,js}\" -w",
-    "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
     "prepare": "ts-patch install -s",
     "bump": "bumpp",
     "release": "node scripts/release.js",
-    "generate:readme": "ts-node scripts/readme/write.ts",
+    "generate:readme": "tsx scripts/readme/write.ts",
     "lint": "eslint .",
     "lint:fix": "eslint ./test --fix",
     "-------": "-----------",
